Beanies list added

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,14 +12,12 @@
 
     <ul>
         <li ><a class="active" href="">Home</a></li>
-        <li id="guest-home-page"><a href="">Beanies</a></li>
-        <li id="guest-create-post"><a href="">FaceMasks</a></li>
-        <li id="display-username"><a href="#" >Gloves</a></li>
+        <li id="guest-home-page"><a href="beanies.html">Beanies</a></li>
+        <li id="guest-create-post"><a href="facemasks.html">FaceMasks</a></li>
+        <li id="display-username"><a href="gloves.html" >Gloves</a></li>
     </ul>
 
 </nav>
-<div id="testing-api"></div>
 </body>
-<script src="../app.js"></script>
 
 </html>
