fetch manufacturerData working

--- a/frontend/beanies.html
+++ b/frontend/beanies.html
@@ -32,8 +32,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <style>
-</style>
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="./css/beanies.css">
 </head>
 <body>
@@ -43,10 +42,10 @@
             <p>Name</p>
         </div>
         <div class="table-cell">
-            <p>Type</p>
+            <p>Manufacturer</p>
         </div>
         <div class="table-cell">
-            <p>Manufacturer</p>
+            <p>Available</p>
         </div>
         <div class="table-cell">
             <p>Colors</p>
@@ -56,10 +55,8 @@
         </div>
     </div>
 
-   <div id="beanie-data"></div>
+   <div id="beanies-data"></div>
 </div>
-
-
 
 </body>
 <script src="../app.js"></script>
