--- a/frontend/gloves.html
+++ b/frontend/gloves.html
@@ -2,11 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="./css/gloves.css">
     <title>Title</title>
 </head>
 <body>
-<div id="testing-api"></div>
+<div class="table-box">
+    <div class="table-row table-head">
+        <div class="table-cell first-cell">
+            <p>Name</p>
+        </div>
+        <div class="table-cell">
+            <p>Type</p>
+        </div>
+        <div class="table-cell">
+            <p>Manufacturer</p>
+        </div>
+        <div class="table-cell">
+            <p>Colors</p>
+        </div>
+        <div class="table-cell last-cell">
+            <p>ID</p>
+        </div>
+    </div>
 
+    <div id="gloves-data"></div>
+</div>
 </body>
 <script src="../gloves.js"></script>
 </html>
