all functionality added

--- a/frontend/beanies.html
+++ b/frontend/beanies.html
@@ -1,41 +1,24 @@
-<!--
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" href="./css/beanies.css">
 
-</head>
-<body>
-<div class="sticky-bar">
-    <ul class="nav">
-        <li>Name</li>
-        <li>Manufacturer</li>
-        <li>ID</li>
-    </ul>
-</div>
-<table >
-    <tr>
-        <th>Name</th>
-        <th>Manufacturer</th>
-        <th>ID</th>
-    </tr>
-    <tr>
-        <td id="testing-api"></td>
-    </tr>
-</table>
-
-</body>
-<script src="../app.js"></script>
-</html>-->
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./css/beanies.css">
+    <link rel="stylesheet" href="./css/style.css">
+
 </head>
 <body>
+<nav>
+
+    <ul>
+        <li ><a href="index.html">Home</a></li>
+        <li id="guest-home-page"><a class="active" href="beanies.html">Beanies</a></li>
+        <li id="guest-create-post"><a href="facemasks.html">FaceMasks</a></li>
+        <li id="display-username"><a href="gloves.html" >Gloves</a></li>
+    </ul>
+
+</nav>
+
 <div class="table-box">
     <div class="table-row table-head">
         <div class="table-cell first-cell">
