--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
 <nav>
 
     <ul>
-        <li ><a class="active" href="">Home</a></li>
+        <li ><a class="active" href="index.html">Home</a></li>
         <li id="guest-home-page"><a href="beanies.html">Beanies</a></li>
         <li id="guest-create-post"><a href="facemasks.html">FaceMasks</a></li>
         <li id="display-username"><a href="gloves.html" >Gloves</a></li>
